[project]
name = "arfpy"
version = "0.1.1"
description = "Adversarial random forests for density estimation and generative modeling"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Kristin Blesch", email = "blesch@leibniz-bips.de" },
    { name = "Marvin N. Wright" },
]
dependencies = [
    "numpy>=1.23",
    "pandas>=2.0",
    "scikit-learn>=1.5",
    "scipy>=1.7",
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/bips-hb/arfpy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.0",
    "matplotlib>=3.6",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
]
